Increase fixed overlay z-index

--- a/musqlo-frontend/src/app/shared/fixed-overlay/fixed-overlay.component.scss
+++ b/musqlo-frontend/src/app/shared/fixed-overlay/fixed-overlay.component.scss
@@ -1,3 +1,8 @@
+:host {
+    z-index: 10000;
+    position: relative;
+}
+
 .overlaypanel{
     position:fixed;
     bottom:76px;
